# crd-mcp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: crd.rs  main.rs  req.rs  res.rs  service.rs
src/req/: condition.rs
