[package]
name = "crd-mcp"
description = "国立国会図書館 レファレンス協同データベースシステム(CRD)の検索を行うMCP"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 AND MIT"
repository = "https://github.com/sizumita/crd-mcp"
readme = "README.md"

[dependencies]
rmcp = { version = "0.12.0", features = ["server", "schemars"] }
tokio = {version = "1.48.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
schemars = {version = "1.1.0"}
serde_json = "1.0.145"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
reqwest = {version = "0.12.26", features = ["json"]}
quick-xml = {version = "0.38.4", features = ["serde", "serialize"]}
